  - Vaulter: use fraction instead of overload for ballast
  - Devices: Switch to manual MC when set via external Device
  - AirControlDisplay: Read-out transponder mode
  - Larus: Protocol 0.1.4 add OAT,GLoad,Circling/Cruise
  - SerialPorts: add 230400 baud support
  - Add port 4000 to tcp-client
* Polar:
  - LS8-15m: default polar, set to values according to flight manual
* Weglide:
  - add button under config menu to tigger IGC upload
* Task:
  - Reachable abort task landable waypoints are now sorted by arrival altitude
    instead of arrival time.

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424
  - CRITICAL: fix reachability calculation with older compilers (OpenVario,..)
* airspace
  - add classes according the OpenAir extended format AY tag
  - coloring is done according to the AC tag, or if present and allowed, according to the AY tag
* data files
  - new topology available from mapgen (including airport runways and rivers)
  - fix loss of "home" waypoint designation in certain situations for a
    non-airport home waypoint
  - reworked sgs-233 polar
* documentation
  - clarify task speed calculation section
  - lua reference updated
* ui
  - Airspace filter list can filter by type
  - TC 30s Infobox shows now climb rate since start of thermal
  - TL Gain Infobox shows now the overall climb rate of last thermal
  - add new Infobox V Task Est (Speed task estimated)
  - Status-Task panel: "Estimated task time", "Remaining time", and "Speed
    estimated" now blank if MC>0 & can't finish task
  - Status-Task panel: "Remaining time", "Remaining distance", "Speed
    estimated", and "Speed remaining" now blank after task is finished
  - add missing airspace to Select Airspace filter
  - NumberEntry dialog value can now be accepted by enter
  - Vario center gross label
  - Vario use AutoFonts for lables and values