@@ -81,6 +81,7 @@ Version 7.44 - not yet released
   - Add port 4000 to tcp-client
 * Polar:
   - LS8-15m: default polar, set to values according to flight manual
+  - Imported 32 polars from Ideaflieg, Lk8000 and condorutil
 * Weglide:
   - add button under config menu to tigger IGC upload
 * Task:
